# bitcoin-governance-research

./: .gitignore  DATA_SOURCING_AND_REPRODUCIBILITY.md  DOCUMENTATION_AUDIT.md  GITHUB_TOKEN_SETUP.md  LICENSE  PR_ANALYSIS_CHAT_PROMPT.md  QUICK_START.md  README.md  comprehensive_recent_analysis.py  pyproject.toml  setup.sh
findings/: BCAP_INTEGRATION_REPORT.md  BIP_PROCESS_ANALYSIS.md  CONTRIBUTOR_ANALYSIS.md  CONTRIBUTOR_TIMELINE_ANALYSIS.md  CRITICAL_REVIEW_ADVERSARIAL.md  CROSS_PLATFORM_NETWORKS.md  CROSS_REPO_COMPARISON.md  ENHANCED_FUNDING_ANALYSIS_REPORT.md  EXECUTIVE_SUMMARY.md  EXTERNAL_RESEARCH_COMPARISON.md  GINI_COEFFICIENT_EXPLANATION.md  GLOSSARY_AND_CONTEXT.md  INFORMAL_SENTIMENT_ANALYSIS.md  INTERDISCIPLINARY_ANALYSIS_REPORT.md  MAINTAINER_LIST_SOURCE.md  MAINTAINER_TIMELINE_ANALYSIS.md  MERGE_PATTERN_BREAKDOWN.md  NOVEL_INTERPRETATIONS.md  PR_IMPORTANCE_ANALYSIS.md  README.md  RELEASE_SIGNING_ANALYSIS.md  RESEARCH_METHODOLOGY.md  REVIEW_QUALITY_ENHANCED_ANALYSIS.md  SATOSHI_GOVERNANCE_ANALYSIS.md  SATOSHI_GOVERNANCE_INSIGHTS.md  STATISTICAL_DEFENSE_RESULTS.md  TEMPORAL_ANALYSIS_REPORT.md
scripts/: aggressive_deredundancy.py  check_token.py  consistency_audit.py  consolidate_findings.py  consolidate_findings_final.py  consolidate_redundant_content.py  final_redundancy_removal.py  full_diagnostic.py  monitor_collection.sh  prepare_publication.py  remove_all_redundancy.py  remove_redundant_docs.py  run_all_analyses.py  test_minimal_collection.py  update_merged_by_analyses.py  validate_integration.py  validate_publication.py  validate_setup.py  workflow.py
(+18768 files in other folders)
